objects/RMA__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAsab</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eng_Review_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eng Review Req?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>RMAs (Order)</relationshipLabel>
        <relationshipName>RMAsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Liability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Liability?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Status__c</fullName>
        <label>RMA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Process</fullName>
                </value>
                <value>
                    <fullName>Customer Approval</fullName>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>In-Transit</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Prepare Ship</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Type__c</fullName>
        <label>RMA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contamination</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Transit Issue</fullName>
                </value>
                <value>
                    <fullName>Labeling/Print Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Lot_Number__c</fullName>
        <label>Serial/Lot Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Warranty?</label>
        <type>Checkbox</type>
    </fields>
    <label>RMA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMA-{0000}</displayFormat>
        <label>RMA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>